--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,11 +1,34 @@
-<h1> Lista de filmes</h1>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Filmes</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+<title>Lista de filmes</title>
+  </head>
+  <body>
+    <h1>Filmes</h1>
 
 <%= link_to "Cadastrar um filme", new_movie_path %><br />
+    <div>
+      <h2>Já lançados</h2>
+      <ul>
+        <% @publish.each do |movie| %>
+          <li><%=link_to movie.title, movie_path(movie.id) %> <br /></li>
+        <% end %>
+      </ul>
+    </div>
 
-<br />
+    <div>
+      <h2>A ser lançado</h2>
+      <ul>
+        <% @draft.each do |movie| %>
+          <li><%=link_to movie.title, movie_path(movie.id) %> <br /></li>
+        <% end %>
+      </ul>
+    </div>
 
-<% @movies.each do |movie| %>
-  
-    <%=link_to movie.title, movie_path(movie.id) %> <br />
-
-<% end %>
+  </body>
+   </body>
+</html>
